# nano-banana-image-edit

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  pytest.ini
data/prompts/: another-prompt.md  extract-garment.md  jacket-dress.md  swap-dress.md  two-references.md  update-beach-image.md
data/prompts-system/: extract-garment-system.md
src/my_project/: edit_configuration.py  extract-clothes.py  extract_clothes.py  gemini_config.py  gemini_image_edit.py  main.py  shared.py
tests/: conftest.py
tests/integration/: test_ai_edit_once.py
tests/unit/: test_gemini_edit_config.py
