[project]
name = "abi-clothes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.47.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "python-dotenv>=1.2.1",
    "torch>=2.9.0",
    "transformers>=4.57.1",
]
